Fixed bugs in category and product services